atualizacao de botoes e imagens

--- a/demo/index.html
+++ b/demo/index.html
@@ -19,11 +19,15 @@
     <br />
     <div class="row container-fluid">
       <button type="button" class="btn btn-success" id="jogar">
-        Clique aqui para iniciar
+        Iniciar Jogo
       </button>
+      <div></div>
       <button type="button" class="btn btn-danger" id="mostrarTudo">
-        Mostrar Tudo
+        Mostrar Personagens
       </button>
+        <button type="button" class="btn btn-info" onclick="window.location.href=`https://github.com/FelipeLissa/Jogo-da-memoria-js/tree/master/demo`">GitHub</button>
+
+
     </div>
     <div id="carregando" class="row container-fluid invisible">
       <strong id="contador">Começando em 1 ...</strong>
@@ -41,7 +45,7 @@
     
     <div class="row container-fluid">
       <div id="mensagem" class="alert alert-success invisible" role="alert">
-        Combinação certa!
+        Boa
       </div>
       
     </div>
