--- a/ProjetoFinal/demo/index.html
+++ b/ProjetoFinal/demo/index.html
@@ -25,7 +25,7 @@
       <button type="button" class="btn btn-danger" id="mostrarTudo">
         Mostrar Personagens
       </button>
-        <button type="button" class="btn btn-info" onclick="window.location.href=`https://github.com/FelipeLissa/Jogo-da-memoria-js/tree/master/demo`">GitHub</button>
+        <button type="button" class="btn btn-info" onclick="window.location.href=`https://felipelissa.github.io/Jogo-da-memoria-js/ProjetoFinal/demo/`">GitHub</button>
 
 
     </div>
